@@ -1,3 +1,8 @@
+2004-06-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl: add [X] tab delete button and Console -> Delete Tab
+	menu item. [Bug 970785]
+
 2004-05-12  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (observe): allow observe of 'proc'
